2008-02-11  Vincent Untz  <vuntz@gnome.org>

	Animate panel startup.
	Based on patch by William Jon McCann <mccann@jhu.edu>
	Fix bug #513756.

	* panel-toplevel.c: (get_delta): use GTimeVal
	(panel_toplevel_update_animating_position): updated for get_delta()
	change
	(panel_toplevel_realize): queue an automatic unhide
	(panel_toplevel_animation_timeout): updated
	(panel_toplevel_get_animation_time): make the time depend on the
	speed only
	(panel_toplevel_start_animation): updated for
	panel_toplevel_get_animation_time() change
	(panel_toplevel_initially_hide): new
	(panel_toplevel_init): initially make the toplevel automatically
	hidden

2008-02-11  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-items.c: (panel_place_menu_item_append_local_gio): put
	items in a submenu if there are too many items. Fix a regression.

2008-02-11  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-items.c: (panel_menu_item_mount_volume): update for API
	change in gio

2008-02-11  Vincent Untz  <vuntz@gnome.org>

	* panel-util.c: (panel_util_get_icon_for_uri): remove workaround for
	application/x-gnome-saved-search places. We don't need the
	fast-content-type anymore. Maybe this was needed before because of a
	bug in gio?

2008-02-11  Vincent Untz  <vuntz@gnome.org>

	* panel-util.c: (panel_util_get_file_description): new, to get the
	description of a GFile
	(panel_util_get_label_for_uri): rework to use the description of the
	GFile when available

2008-02-11  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-items.c: (panel_place_menu_item_append_local_gio),
	(panel_place_menu_item_append_remote_gio): use g_file_is_native()
	instead of looking at the URI scheme

2008-02-11  Vincent Untz  <vuntz@gnome.org>

	* panel.c: (drop_uri): finish gio port

2008-02-10  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-items.c: (panel_place_menu_item_append_local_gio): add
	back a string that was removed and will be used again soon. Right now,
	it's just sitting there, useless. But it's temporary :-)
