@@ -1,5 +1,11 @@
 2008-02-11  Vincent Untz  <vuntz@gnome.org>
 
+	* panel-logout.c: (panel_logout_init): center the window
+	(panel_logout_new): focus the window. Patch by Matthias Clasen
+	<mclasen@redhat.com>. Fix bug #514026
+
+2008-02-11  Vincent Untz  <vuntz@gnome.org>
+
 	Animate panel startup.
 	Based on patch by William Jon McCann <mccann@jhu.edu>
 	Fix bug #513756.
